message LogEntry {
  optional bytes remote_address = 1;
  optional bytes local_address = 2;
  optional bytes remote_logname = 3;
  optional bytes remote_user = 4;
  optional bytes filename = 5;
  optional bytes unparsed_uri = 6;
  optional bytes method = 7;
  optional bytes protocol = 8;
  optional uint32 status = 9;
  optional bytes handler = 10;
  optional uint32 bytes_sent = 11;
  optional bytes cookies = 12;
  optional bytes user_agent = 13;
  optional bytes virtual_host = 14;
  optional bytes server_name = 15;
  optional uint64 request_time = 16;
  optional bytes referrer = 17;
}
